--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,10 @@
 name: CS5099-SealCounting
 channels:
+  - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - _tflow_select=2.3.0=mkl
+  - _tflow_select=2.1.0=gpu
   - absl-py=0.9.0=py38_0
   - astunparse=1.6.3=py_0
   - blas=1.0=mkl
@@ -17,6 +18,9 @@ dependencies:
   - chardet=3.0.4=py38_1003
   - click=7.1.2=py_0
   - cryptography=2.9.2=py38h1ba5d50_0
+  - cudatoolkit=10.1.243=h6bb024c_0
+  - cudnn=7.6.5=cuda10.1_0
+  - cupti=10.1.168=0
   - cycler=0.10.0=py38_0
   - dbus=1.13.14=hb2f20db_0
   - expat=2.2.6=he6710b0_0
@@ -89,9 +93,10 @@ dependencies:
   - sqlite=3.31.1=h62c20be_1
   - tensorboard=2.2.1=pyh532a8cf_0
   - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.2.0=mkl_py38h6d3daf0_0
-  - tensorflow-base=2.2.0=mkl_py38h5059a2d_0
+  - tensorflow=2.2.0=gpu_py38hb782248_0
+  - tensorflow-base=2.2.0=gpu_py38h83e3d50_0
   - tensorflow-estimator=2.2.0=pyh208ff02_0
+  - tensorflow-gpu=2.2.0=h0d30ee6_0
   - termcolor=1.1.0=py38_1
   - tk=8.6.8=hbc83047_0
   - tornado=6.0.4=py38h7b6447c_1
