--- a/config/yolo3_mish.cfg
+++ b/config/yolo3_mish.cfg
@@ -28,7 +28,7 @@ filters=32
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 # Downsample
 
@@ -38,7 +38,7 @@ filters=64
 size=3
 stride=2
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -46,7 +46,7 @@ filters=32
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -54,7 +54,7 @@ filters=64
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -68,7 +68,7 @@ filters=128
 size=3
 stride=2
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -76,7 +76,7 @@ filters=64
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -84,7 +84,7 @@ filters=128
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -96,7 +96,7 @@ filters=64
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -104,7 +104,7 @@ filters=128
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -118,7 +118,7 @@ filters=256
 size=3
 stride=2
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -126,7 +126,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -134,7 +134,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -146,7 +146,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -154,7 +154,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -166,7 +166,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -174,7 +174,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -186,7 +186,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -194,7 +194,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -207,7 +207,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -215,7 +215,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -227,7 +227,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -235,7 +235,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -247,7 +247,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -255,7 +255,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -267,7 +267,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -275,7 +275,7 @@ filters=256
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -289,7 +289,7 @@ filters=512
 size=3
 stride=2
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -297,7 +297,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -305,7 +305,7 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -318,7 +318,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -326,7 +326,7 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -339,7 +339,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -347,7 +347,7 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -360,7 +360,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -368,7 +368,7 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -380,7 +380,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -388,28 +388,7 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
-
-[shortcut]
-from=-3
-activation=linear
-
-
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-batch_normalize=1
-filters=512
-size=3
-stride=1
-pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -422,7 +401,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -430,7 +409,28 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
+
+[shortcut]
+from=-3
+activation=linear
+
+
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
 
 [shortcut]
 from=-3
@@ -442,7 +442,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -450,7 +450,7 @@ filters=512
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -464,7 +464,7 @@ filters=1024
 size=3
 stride=2
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -472,7 +472,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -480,7 +480,7 @@ filters=1024
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -492,7 +492,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -500,7 +500,7 @@ filters=1024
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -512,7 +512,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -520,7 +520,7 @@ filters=1024
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -532,7 +532,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -540,7 +540,7 @@ filters=1024
 size=3
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [shortcut]
 from=-3
@@ -554,7 +554,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -562,7 +562,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -570,7 +570,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -578,7 +578,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -586,7 +586,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -594,7 +594,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 size=1
